// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Combobox /> > Generated Snapshots > AdjustedWidth story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-[240px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_9b_"
      id="headlessui-label-_r_9a_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_9l_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_9i_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_9a_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_9b_"
      role="combobox"
      style="--combobox__input-width: calc(4 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_9i_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_9a_ headlessui-combobox-button-_r_9c_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_9c_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > Default story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_3_"
      id="headlessui-label-_r_2_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_d_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_a_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_2_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_3_"
      role="combobox"
      style="--combobox__input-width: calc(4 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_a_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_2_ headlessui-combobox-button-_r_4_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_4_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > Error story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--has-fieldNote_ff8210 _combobox--label-layout-vertical_ff8210 w-[384px]"
  data-headlessui-state="open invalid"
  data-invalid=""
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_ba_"
      id="headlessui-label-_r_b9_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
    <span
      class="_text_b3eba3 _text--body-sm_b3eba3 _combobox__required-text_ff8210"
    >
      (Required)
    </span>
    <div
      class="_combobox__subLabel_ff8210"
    >
      <span
        class="_text_b3eba3 _text--body-sm_b3eba3"
      >
        Some descriptive text
      </span>
    </div>
  </div>
  <div
    class="_combobox-input_ff8210 _combobox-input--error_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_bk_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_bh_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_b9_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open invalid focus"
      data-invalid=""
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_ba_"
      required=""
      role="combobox"
      style="--combobox__input-width: calc(4 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_bh_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_b9_ headlessui-combobox-button-_r_bb_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active invalid hover"
      data-hover=""
      data-invalid=""
      data-open=""
      id="headlessui-combobox-button-_r_bb_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > HorizontalLabel story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-horizontal_ff8210 w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_1d_"
      id="headlessui-label-_r_1c_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Animal?
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_1n_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_1k_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_1c_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_1d_"
      role="combobox"
      style="--combobox__input-width: calc(4 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_1k_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_1c_ headlessui-combobox-button-_r_1e_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_1e_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > Immediate story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_o_"
      id="headlessui-label-_r_n_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_12_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_v_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_n_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_o_"
      role="combobox"
      style="--combobox__input-width: calc(4 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_v_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_n_ headlessui-combobox-button-_r_p_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_p_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > MultipleWithChipIcons story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-[320px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_6l_"
      id="headlessui-label-_r_6k_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal(s)
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210 _combobox-input--has-chips_ff8210"
  >
    <ul
      class="_combobox-input__chips_ff8210"
    >
      <li>
        <div
          class="_input-chip_f95fba"
        >
          <div
            class="_input-chip__label_f95fba"
          >
            <svg
              aria-hidden="true"
              class="_icon_779da8 _input-chip__leading-component_f95fba"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.023 17.2923C6.873 16.6616 7.799 16.1635 8.801 15.798C9.80283 15.4327 10.8692 15.25 12 15.25C13.1308 15.25 14.1972 15.4327 15.199 15.798C16.201 16.1635 17.127 16.6616 17.977 17.2923C18.5987 16.6089 19.0913 15.8179 19.4548 14.9192C19.8183 14.0206 20 13.0475 20 12C20 9.78333 19.2208 7.89583 17.6625 6.3375C16.1042 4.77917 14.2167 4 12 4C9.78333 4 7.89583 4.77917 6.3375 6.3375C4.77917 7.89583 4 9.78333 4 12C4 13.0475 4.18175 14.0206 4.54525 14.9192C4.90875 15.8179 5.40133 16.6089 6.023 17.2923ZM9.6905 11.8095C9.0635 11.1827 8.75 10.4128 8.75 9.5C8.75 8.58717 9.0635 7.81733 9.6905 7.1905C10.3173 6.5635 11.0872 6.25 12 6.25C12.9128 6.25 13.6827 6.5635 14.3095 7.1905C14.9365 7.81733 15.25 8.58717 15.25 9.5C15.25 10.4128 14.9365 11.1827 14.3095 11.8095C13.6827 12.4365 12.9128 12.75 12 12.75C11.0872 12.75 10.3173 12.4365 9.6905 11.8095ZM12 21.5C10.6808 21.5 9.44333 21.2519 8.2875 20.7557C7.13167 20.2596 6.12625 19.5839 5.27125 18.7288C4.41608 17.8738 3.74042 16.8683 3.24425 15.7125C2.74808 14.5567 2.5 13.3192 2.5 12C2.5 10.6808 2.74808 9.44333 3.24425 8.2875C3.74042 7.13167 4.41608 6.12625 5.27125 5.27125C6.12625 4.41608 7.13167 3.74042 8.2875 3.24425C9.44333 2.74808 10.6808 2.5 12 2.5C13.3192 2.5 14.5567 2.74808 15.7125 3.24425C16.8683 3.74042 17.8738 4.41608 18.7288 5.27125C19.5839 6.12625 20.2596 7.13167 20.7557 8.2875C21.2519 9.44333 21.5 10.6808 21.5 12C21.5 13.3192 21.2519 14.5567 20.7557 15.7125C20.2596 16.8683 19.5839 17.8738 18.7288 18.7288C17.8738 19.5839 16.8683 20.2596 15.7125 20.7557C14.5567 21.2519 13.3192 21.5 12 21.5ZM14.6105 19.5645C15.4483 19.274 16.1923 18.8679 16.8423 18.3462C16.1923 17.8436 15.458 17.4519 14.6395 17.1712C13.8208 16.8904 12.941 16.75 12 16.75C11.059 16.75 10.1776 16.8888 9.35575 17.1663C8.53392 17.4439 7.80125 17.8372 7.15775 18.3462C7.80775 18.8679 8.55167 19.274 9.3895 19.5645C10.2273 19.8548 11.0975 20 12 20C12.9025 20 13.7727 19.8548 14.6105 19.5645ZM13.248 10.748C13.5827 10.4135 13.75 9.9975 13.75 9.5C13.75 9.0025 13.5827 8.5865 13.248 8.252C12.9135 7.91733 12.4975 7.75 12 7.75C11.5025 7.75 11.0865 7.91733 10.752 8.252C10.4173 8.5865 10.25 9.0025 10.25 9.5C10.25 9.9975 10.4173 10.4135 10.752 10.748C11.0865 11.0827 11.5025 11.25 12 11.25C12.4975 11.25 12.9135 11.0827 13.248 10.748Z"
              />
            </svg>
            <span
              class="_text_b3eba3 _text--body-xs_b3eba3"
            >
              Dogs
            </span>
          </div>
          <button
            aria-label="remove Dogs"
            class="_input-chip__action-button_f95fba"
          >
            <svg
              aria-hidden="true"
              class="_icon_779da8"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
              />
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="_input-chip_f95fba"
        >
          <div
            class="_input-chip__label_f95fba"
          >
            <svg
              aria-hidden="true"
              class="_icon_779da8 _input-chip__leading-component_f95fba"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.023 17.2923C6.873 16.6616 7.799 16.1635 8.801 15.798C9.80283 15.4327 10.8692 15.25 12 15.25C13.1308 15.25 14.1972 15.4327 15.199 15.798C16.201 16.1635 17.127 16.6616 17.977 17.2923C18.5987 16.6089 19.0913 15.8179 19.4548 14.9192C19.8183 14.0206 20 13.0475 20 12C20 9.78333 19.2208 7.89583 17.6625 6.3375C16.1042 4.77917 14.2167 4 12 4C9.78333 4 7.89583 4.77917 6.3375 6.3375C4.77917 7.89583 4 9.78333 4 12C4 13.0475 4.18175 14.0206 4.54525 14.9192C4.90875 15.8179 5.40133 16.6089 6.023 17.2923ZM9.6905 11.8095C9.0635 11.1827 8.75 10.4128 8.75 9.5C8.75 8.58717 9.0635 7.81733 9.6905 7.1905C10.3173 6.5635 11.0872 6.25 12 6.25C12.9128 6.25 13.6827 6.5635 14.3095 7.1905C14.9365 7.81733 15.25 8.58717 15.25 9.5C15.25 10.4128 14.9365 11.1827 14.3095 11.8095C13.6827 12.4365 12.9128 12.75 12 12.75C11.0872 12.75 10.3173 12.4365 9.6905 11.8095ZM12 21.5C10.6808 21.5 9.44333 21.2519 8.2875 20.7557C7.13167 20.2596 6.12625 19.5839 5.27125 18.7288C4.41608 17.8738 3.74042 16.8683 3.24425 15.7125C2.74808 14.5567 2.5 13.3192 2.5 12C2.5 10.6808 2.74808 9.44333 3.24425 8.2875C3.74042 7.13167 4.41608 6.12625 5.27125 5.27125C6.12625 4.41608 7.13167 3.74042 8.2875 3.24425C9.44333 2.74808 10.6808 2.5 12 2.5C13.3192 2.5 14.5567 2.74808 15.7125 3.24425C16.8683 3.74042 17.8738 4.41608 18.7288 5.27125C19.5839 6.12625 20.2596 7.13167 20.7557 8.2875C21.2519 9.44333 21.5 10.6808 21.5 12C21.5 13.3192 21.2519 14.5567 20.7557 15.7125C20.2596 16.8683 19.5839 17.8738 18.7288 18.7288C17.8738 19.5839 16.8683 20.2596 15.7125 20.7557C14.5567 21.2519 13.3192 21.5 12 21.5ZM14.6105 19.5645C15.4483 19.274 16.1923 18.8679 16.8423 18.3462C16.1923 17.8436 15.458 17.4519 14.6395 17.1712C13.8208 16.8904 12.941 16.75 12 16.75C11.059 16.75 10.1776 16.8888 9.35575 17.1663C8.53392 17.4439 7.80125 17.8372 7.15775 18.3462C7.80775 18.8679 8.55167 19.274 9.3895 19.5645C10.2273 19.8548 11.0975 20 12 20C12.9025 20 13.7727 19.8548 14.6105 19.5645ZM13.248 10.748C13.5827 10.4135 13.75 9.9975 13.75 9.5C13.75 9.0025 13.5827 8.5865 13.248 8.252C12.9135 7.91733 12.4975 7.75 12 7.75C11.5025 7.75 11.0865 7.91733 10.752 8.252C10.4173 8.5865 10.25 9.0025 10.25 9.5C10.25 9.9975 10.4173 10.4135 10.752 10.748C11.0865 11.0827 11.5025 11.25 12 11.25C12.4975 11.25 12.9135 11.0827 13.248 10.748Z"
              />
            </svg>
            <span
              class="_text_b3eba3 _text--body-xs_b3eba3"
            >
              Cats
            </span>
          </div>
          <button
            aria-label="remove Cats"
            class="_input-chip__action-button_f95fba"
          >
            <svg
              aria-hidden="true"
              class="_icon_779da8"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
              />
            </svg>
          </button>
        </div>
      </li>
    </ul>
    <input
      aria-activedescendant="headlessui-combobox-option-_r_6v_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_6s_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_6k_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_6l_"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_6s_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_6k_ headlessui-combobox-button-_r_6m_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_6m_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > MultipleWithFpoChipContent story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-[320px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_dt_"
      id="headlessui-label-_r_ds_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal(s)
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210 _combobox-input--has-chips_ff8210"
  >
    <ul
      class="_combobox-input__chips_ff8210"
    >
      <li>
        <div
          class="_input-chip_f95fba"
        >
          <div
            class="_input-chip__label_f95fba"
          >
            <span
              class="_input-chip__leading-component_f95fba"
            >
              <span
                aria-hidden="true"
                class="fpo"
                style="height: 14px; width: 14px; font-size: 5px; line-height: 1; overflow: hidden; padding: 0px; flex-grow: 0; flex-shrink: 0; flex-basis: auto;"
              />
            </span>
            <span
              class="_text_b3eba3 _text--body-xs_b3eba3"
            >
              Dogs
            </span>
          </div>
          <button
            aria-label="remove Dogs"
            class="_input-chip__action-button_f95fba"
          >
            <svg
              aria-hidden="true"
              class="_icon_779da8"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
              />
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="_input-chip_f95fba"
        >
          <div
            class="_input-chip__label_f95fba"
          >
            <span
              class="_input-chip__leading-component_f95fba"
            >
              <span
                aria-hidden="true"
                class="fpo"
                style="height: 14px; width: 14px; font-size: 5px; line-height: 1; overflow: hidden; padding: 0px; flex-grow: 0; flex-shrink: 0; flex-basis: auto;"
              />
            </span>
            <span
              class="_text_b3eba3 _text--body-xs_b3eba3"
            >
              Cats
            </span>
          </div>
          <button
            aria-label="remove Cats"
            class="_input-chip__action-button_f95fba"
          >
            <svg
              aria-hidden="true"
              class="_icon_779da8"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
              />
            </svg>
          </button>
        </div>
      </li>
    </ul>
    <input
      aria-activedescendant="headlessui-combobox-option-_r_e7_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_e4_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_ds_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_dt_"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_e4_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_ds_ headlessui-combobox-button-_r_du_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_du_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > MultipleWithManySelected story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-[240px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_5b_"
      id="headlessui-label-_r_5a_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal(s)
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210 _combobox-input--has-chips_ff8210"
  >
    <ul
      class="_combobox-input__chips_ff8210"
    >
      <li>
        <div
          class="_input-chip_f95fba"
        >
          <div
            class="_input-chip__label_f95fba"
          >
            <span
              class="_text_b3eba3 _text--body-xs_b3eba3"
            >
              Dogs
            </span>
          </div>
          <button
            aria-label="remove Dogs"
            class="_input-chip__action-button_f95fba"
          >
            <svg
              aria-hidden="true"
              class="_icon_779da8"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
              />
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="_input-chip_f95fba"
        >
          <div
            class="_input-chip__label_f95fba"
          >
            <span
              class="_text_b3eba3 _text--body-xs_b3eba3"
            >
              Cats
            </span>
          </div>
          <button
            aria-label="remove Cats"
            class="_input-chip__action-button_f95fba"
          >
            <svg
              aria-hidden="true"
              class="_icon_779da8"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
              />
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="_input-chip_f95fba"
        >
          <div
            class="_input-chip__label_f95fba"
          >
            <span
              class="_text_b3eba3 _text--body-xs_b3eba3"
            >
              Birds
            </span>
          </div>
          <button
            aria-label="remove Birds"
            class="_input-chip__action-button_f95fba"
          >
            <svg
              aria-hidden="true"
              class="_icon_779da8"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
              />
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="_input-chip_f95fba"
        >
          <div
            class="_input-chip__label_f95fba"
          >
            <span
              class="_text_b3eba3 _text--body-xs_b3eba3"
            >
              Rabbits
            </span>
          </div>
          <button
            aria-label="remove Rabbits"
            class="_input-chip__action-button_f95fba"
          >
            <svg
              aria-hidden="true"
              class="_icon_779da8"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
              />
            </svg>
          </button>
        </div>
      </li>
    </ul>
    <input
      aria-activedescendant="headlessui-combobox-option-_r_5l_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_5i_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_5a_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_5b_"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_5i_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_5a_ headlessui-combobox-button-_r_5c_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_5c_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > MultipleWithSelectionLimit story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--has-fieldNote_ff8210 _combobox--label-layout-vertical_ff8210 w-[320px]"
  data-headlessui-state="open invalid"
  data-invalid=""
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_60_"
      id="headlessui-label-_r_5v_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal(s)
      </span>
    </label>
    <div
      class="_combobox__subLabel_ff8210"
    >
      <span
        class="_text_b3eba3 _text--body-sm_b3eba3"
      >
        Choose up to 2
      </span>
    </div>
  </div>
  <div
    class="_combobox-input_ff8210 _combobox-input--has-chips_ff8210 _combobox-input--error_ff8210"
  >
    <ul
      class="_combobox-input__chips_ff8210"
    >
      <li>
        <div
          class="_input-chip_f95fba"
        >
          <div
            class="_input-chip__label_f95fba"
          >
            <span
              class="_text_b3eba3 _text--body-xs_b3eba3"
            >
              Dogs
            </span>
          </div>
          <button
            aria-label="remove Dogs"
            class="_input-chip__action-button_f95fba"
          >
            <svg
              aria-hidden="true"
              class="_icon_779da8"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
              />
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="_input-chip_f95fba"
        >
          <div
            class="_input-chip__label_f95fba"
          >
            <span
              class="_text_b3eba3 _text--body-xs_b3eba3"
            >
              Cats
            </span>
          </div>
          <button
            aria-label="remove Cats"
            class="_input-chip__action-button_f95fba"
          >
            <svg
              aria-hidden="true"
              class="_icon_779da8"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
              />
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="_input-chip_f95fba"
        >
          <div
            class="_input-chip__label_f95fba"
          >
            <span
              class="_text_b3eba3 _text--body-xs_b3eba3"
            >
              Birds
            </span>
          </div>
          <button
            aria-label="remove Birds"
            class="_input-chip__action-button_f95fba"
          >
            <svg
              aria-hidden="true"
              class="_icon_779da8"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
              />
            </svg>
          </button>
        </div>
      </li>
    </ul>
    <input
      aria-activedescendant="headlessui-combobox-option-_r_6a_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_67_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_5v_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open invalid focus"
      data-invalid=""
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_60_"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_67_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_5v_ headlessui-combobox-button-_r_61_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active invalid hover"
      data-hover=""
      data-invalid=""
      data-open=""
      id="headlessui-combobox-button-_r_61_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > MultipleWithoutChips story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--has-fieldNote_ff8210 _combobox--label-layout-vertical_ff8210 w-[384px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_7a_"
      id="headlessui-label-_r_79_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal(s)
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_7k_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_7h_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_79_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_7a_"
      placeholder="1 selected"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_7h_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_79_ headlessui-combobox-button-_r_7b_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_7b_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > NoVisibleLabel story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_ct_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_cq_"
      aria-expanded="true"
      aria-label="hidden label"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_cj_"
      role="combobox"
      style="--combobox__input-width: calc(4 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_cq_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_ck_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > NoVisibleLabelButRequired story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-[384px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210 _combobox__overline--no-label_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_d8_"
      id="headlessui-label-_r_d7_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      />
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_di_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_df_"
      aria-expanded="true"
      aria-label="hidden label"
      aria-labelledby="headlessui-label-_r_d7_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_d8_"
      required=""
      role="combobox"
      style="--combobox__input-width: calc(4 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_df_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_d7_ headlessui-combobox-button-_r_d9_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_d9_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > Optional story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-[384px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_al_"
      id="headlessui-label-_r_ak_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
    <span
      class="_text_b3eba3 _text--body-sm_b3eba3 _combobox__required-text_ff8210"
    >
      (Optional)
    </span>
    <div
      class="_combobox__subLabel_ff8210"
    >
      <span
        class="_text_b3eba3 _text--body-sm_b3eba3"
      >
        Some descriptive text
      </span>
    </div>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_av_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_as_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_ak_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_al_"
      role="combobox"
      style="--combobox__input-width: calc(4 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_as_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_ak_ headlessui-combobox-button-_r_am_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_am_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > Required story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-[384px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_a0_"
      id="headlessui-label-_r_9v_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
    <span
      class="_text_b3eba3 _text--body-sm_b3eba3 _combobox__required-text_ff8210"
    >
      (Required)
    </span>
    <div
      class="_combobox__subLabel_ff8210"
    >
      <span
        class="_text_b3eba3 _text--body-sm_b3eba3"
      >
        Some descriptive text
      </span>
    </div>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_aa_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_a7_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_9v_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_a0_"
      required=""
      role="combobox"
      style="--combobox__input-width: calc(4 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_a7_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_9v_ headlessui-combobox-button-_r_a1_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_a1_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > Warning story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--has-fieldNote_ff8210 _combobox--label-layout-vertical_ff8210 w-[384px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_bv_"
      id="headlessui-label-_r_bu_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
    <span
      class="_text_b3eba3 _text--body-sm_b3eba3 _combobox__required-text_ff8210"
    >
      (Optional)
    </span>
    <div
      class="_combobox__subLabel_ff8210"
    >
      <span
        class="_text_b3eba3 _text--body-sm_b3eba3"
      >
        Some descriptive text
      </span>
    </div>
  </div>
  <div
    class="_combobox-input_ff8210 _combobox-input--warning_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_c9_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_c6_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_bu_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_bv_"
      role="combobox"
      style="--combobox__input-width: calc(4 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_c6_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_bu_ headlessui-combobox-button-_r_c0_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_c0_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > WithFieldName story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_3c_"
      id="headlessui-label-_r_3b_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
    <div
      class="_combobox__subLabel_ff8210"
    >
      <span
        class="_text_b3eba3 _text--body-sm_b3eba3"
      >
        Additional descriptive text
      </span>
    </div>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_3m_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_3j_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_3b_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_3c_"
      role="combobox"
      style="--combobox__input-width: calc(4 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_3j_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_3b_ headlessui-combobox-button-_r_3d_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_3d_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > WithFieldNote story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--has-fieldNote_ff8210 _combobox--label-layout-vertical_ff8210 w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_41_"
      id="headlessui-label-_r_40_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_4b_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_48_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_40_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_41_"
      role="combobox"
      style="--combobox__input-width: calc(4 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_48_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_40_ headlessui-combobox-button-_r_42_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_42_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > WithPlaceholder story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_4m_"
      id="headlessui-label-_r_4l_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_50_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_4t_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_4l_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_4m_"
      placeholder="Search animals"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_4t_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_4l_ headlessui-combobox-button-_r_4n_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_4n_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > WithProvidedIcons story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_ei_"
      id="headlessui-label-_r_eh_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_es_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_ep_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_eh_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_ei_"
      role="combobox"
      style="--combobox__input-width: calc(4 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_ep_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_eh_ headlessui-combobox-button-_r_ej_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_ej_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 18.6345L6.34619 12.9808L7.39994 11.927L11.9999 16.5115L16.5999 11.927L17.6537 12.9808L11.9999 18.6345ZM11.9999 12.6538L6.34619 7.00004L7.39994 5.94629L11.9999 10.5308L16.5999 5.94629L17.6537 7.00004L11.9999 12.6538Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > WithRenderProp story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_7v_"
      id="headlessui-label-_r_7u_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_89_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_86_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_7u_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      id="headlessui-combobox-input-_r_7v_"
      role="combobox"
      style="--combobox__input-width: calc(4 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_86_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_7u_ headlessui-combobox-button-_r_80_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_80_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
  <p
    class="mt-spacing-size-1"
  >
    Picking
    : 
    Dogs
  </p>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > WithSelectedBy story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_2n_"
      id="headlessui-label-_r_2m_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_33_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_2u_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_2m_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_2n_"
      role="combobox"
      style="--combobox__input-width: calc(4 * 1ch);"
      type="text"
      value="Cats"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_2u_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_2m_ headlessui-combobox-button-_r_2o_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_2o_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > WithSelectedOption story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_22_"
      id="headlessui-label-_r_21_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_2e_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_29_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_21_"
      class="_combobox-input__field_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_22_"
      role="combobox"
      style="--combobox__input-width: calc(4 * 1ch);"
      type="text"
      value="Cats"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_29_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_21_ headlessui-combobox-button-_r_23_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_23_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> > Generated Snapshots > WithTruncation story renders snapshot 1`] = `
<div
  class="_combobox_ff8210 _combobox--label-layout-vertical_ff8210 w-[160px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="_combobox__overline_ff8210"
  >
    <label
      class="_label_76755a _label--md_76755a _combobox__label_ff8210"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-_r_8k_"
      id="headlessui-label-_r_8j_"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="_combobox-input_ff8210"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-_r_8u_"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-_r_8r_"
      aria-expanded="true"
      aria-labelledby="headlessui-label-_r_8j_"
      class="_combobox-input__field_ff8210 _combobox-input__field--truncated_ff8210"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-_r_8k_"
      role="combobox"
      style="--combobox__input-width: calc(42 * 1ch);"
      type="text"
      value="A very long option label that will not fit"
    />
    <button
      aria-controls="headlessui-combobox-options-_r_8r_"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-_r_8j_ headlessui-combobox-button-_r_8l_"
      class="_combobox-input__button_ff8210"
      data-active=""
      data-headlessui-state="open active hover"
      data-hover=""
      data-open=""
      id="headlessui-combobox-button-_r_8l_"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="_icon_779da8 _combobox-input__icon_ff8210 _combobox-input__icon--reversed_ff8210"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;
